2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* config/powerpc/darwin/config.frag:
	Added -no-cpp-precomp for darwin 5.

2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/rebuildLib.in (LIBDIR): 
	Removed another CDPATH usage.

	Reported by:  Riccardo Mottola <zuse@libero.it>

2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in 
	[USE_PRECOMPILED_RT_JAR] (compile-tools-classes): 
	New target. 
	(tools.jar) Build only tools.jar classes.

	Reported by:  Riccardo Mottola <zuse@libero.it>

2005-04-02  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c,
	kaffe/kaffevm/systems/unix-jthreads/jthread.h:
	(jthread_is_blocking): Added to the API for compatibility with
	unix-pthreads.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c,
	kaffe/kaffevm/systems/unix-pthreads/thread-internal.h:
	(jthread_exit): Changed shutdown loop to take into account
	modifications to activeThreads list.
	(jthread_is_blocking): New jthread call.
	
	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(clearBlockState): Set active to 0 when exiting.

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(jthreadedRecvFrom): Fixed logic to avoid eating all CPU.
	
	* config/katomic.h (__atomic_val_bysize, __atomic_bool_bysize): 
	If gcc is 2.95 then the syntax is also different.

2005-04-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in: (compile-classes)
	Removed CDPATH=: command that was confusing zsh on Darwin5.

	Reported by:  Riccardo Mottola <zuse@libero.it>

2005-04-02  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_exit): Removed the use of pthread_cancel during
	final shutdown.

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(clearBlockState): Do not exit if the thread is in BS_THREAD
	blockstate it means the mutex be released.

2005-04-02  Riccardo Mottola <zuse@libero.it>

	* FAQ/FAQ.Known-Bugs: