@@ -1,3 +1,9 @@
+2005-04-03  Dalibor Topic  <robilad@kaffe.org>
+
+	* kaffe/kaffevm/systems/unix-pthreads/Makefile.am 
+	(libkthread_la_SOURCES): Added header files from 
+	EXTRA_DIST.
+
 2005-04-02  Dalibor Topic  <robilad@kaffe.org>
 
 	* config/powerpc/darwin/config.frag:
